--- a/src/styles/vueDragable.scss
+++ b/src/styles/vueDragable.scss
@@ -6,3 +6,17 @@
     background-image:url("../../assets/components_images/table.png");
     background-size:100% 100%;
 }
+.select_com_style{
+    background-image:url("../../assets/components_images/select.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+}
+.input_com_style{
+    background-image:url("../../assets/components_images/input.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+}
